--- a/styles/small.css
+++ b/styles/small.css
@@ -3,26 +3,19 @@
 #37b660 green
 #f15722 red */
 
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Atomic+Age&family=Roboto&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Open+Sans&family=Atomic+Age&family=Roboto&display=swap');
 
 *{
     box-sizing: border-box;
-    margin: 0
-    ;
+    margin: 0;
 }
-/* main{
-    opacity: .3;
-} */
+
 header{
     background-color: #1c699c;
     display: grid;
     grid-template-columns: 3fr max-content;
     padding: 10px;
     gap: 10px;
-    /* place-content: center center; */
-
 }
 .logo{
     width: 14vw;
@@ -54,11 +47,8 @@ nav{
     background-color: #1c699cc7;
     top: 0;
     padding: 20px;
-    /* left: -200px; */
     width: 100%;
     height: 100vh;
-    /* transition: left 0.3s ease-in-out; */
-    /* display: none; */
 }
 
 
@@ -84,7 +74,6 @@ main{
 .hero-box{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /* margin-bottom: 2em; */
 }
 .hero-img{
     width: 100%;
@@ -118,8 +107,6 @@ main{
 .join-butt a{
     font-size: 2vw;
     text-decoration: none;
-    /* background-color:#fcc01d ; */
-    
     color: white;
 }
 .join-butt:hover{
@@ -133,8 +120,6 @@ main{
     margin-top: 1.6em;
     background-color: #eee;
     padding: 10px;
-    /* border-radius: 1em; */
-    /* box-shadow: 0 0 20px; */
     text-align: center;
     line-height: 1.7em;
     font-size: 1em;
@@ -223,6 +208,5 @@ footer a{
     
 }
 h2, h3{
-    /* font-family: 'Open Sans'; */
     font-family: 'Atomic Age';
 }
